--- a/style.css
+++ b/style.css
@@ -3,6 +3,16 @@ body{
     direction: rtl;
 }
 h1{
-    font-size: 1.2em;
-    direction: rtl;
+    font-size: 4.2em;
+    color: #fff;
+    text-shadow: 1px 1px 2px #1A1A1A;
+}
+.top-title{
+    background-color: #1A1A1A;
+    height: 30px;
+    color: #C6C6C6;
+    padding: 30px 200px 30px;
+}
+.header-img{
+    background-color: #949381;
 }
